# concordium-transaction-logger

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  README.md
.github/workflows/: cargo-deny-matrix.yml  ci.yaml  release-indexer.yml  release.yml
examples/: monitor-postgres.rs  postgres.rs
resources/: m0001-initial.sql  m0002-PLT.sql  m0002-accounts-public-key-bindings.sql  schema.sql
resources/indexer/: accounts.sql  base.sql  cis2.sql  contracts.sql  default-config.toml  schema.sql  test-config.toml
resources/indexer/sql/: accounts.sql  base.sql  cis2.sql  contracts.sql
src/: lib.rs  main.rs  migrations.rs  postgres.rs
src/migrations/: m0002_acoount_public_key_binding.rs
wallet-proxy-api/: Cargo.toml  README.md
wallet-proxy-api/src/: error.rs  lib.rs  submission_status.rs
wallet-proxy-indexer/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
wallet-proxy-indexer/examples/: monitor-postgres.rs  postgres.rs
wallet-proxy-indexer/resources/: m0002-accounts-public-key-bindings.sql  m0003-index-for-query-by-block-height-or-timestamp-filter.sql
wallet-proxy-indexer/src/: lib.rs  main.rs  migrations.rs  postgres.rs
wallet-proxy-indexer/src/migrations/: m0002_acoount_public_key_binding.rs
wallet-proxy-service/: Cargo.toml  README.md
wallet-proxy-service/src/: configuration.rs  lib.rs  logging.rs  monitoring.rs  rest.rs  service.rs
wallet-proxy-service/src/monitoring/: health.rs  metrics.rs
wallet-proxy-service/src/rest/: submission_status.rs
wallet-proxy-service/src/rest/middleware/: metrics.rs  mod.rs
wallet-proxy-service/tests/: integration_test.rs  test_monitoring.rs
wallet-proxy-service/tests/integration_test_helpers/: fixtures.rs  mod.rs  node_mock.rs  rest.rs  rest_client.rs  server.rs
wallet-proxy-service/tests/integration_test_monitoring/: healthcheck.rs  metrics.rs  mod.rs
wallet-proxy-service/tests/integration_test_rest/: error.rs  errors.rs  mod.rs  submission_status.rs  test_rest.rs
