[package]
name = "transaction-logger"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "./deps/concordium-rust-sdk", version = "*", features = ["postgres"] }
anyhow = "1"
tokio = {version = "1.8", features = ["full"]}
thiserror = "1.0"
structopt = "0.3"
clap = "2.33"
chrono = "0.4.19"
tokio-postgres = { version = "^0.7.7", features = ["with-serde_json-1"] }
env_logger = "0.9"
log = "0.4"
tonic = "0.8"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
