[workspace]
resolver = "3"

members = [
   "wallet-proxy-indexer"
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.package]
authors = ["Concordium <developers@concordium.com>"]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env", "cargo"] }
concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
derive_more = { version = "2.0.1", features = ["display", "from", "from_str", "into"] }
env_logger = "0.11.8" # deprecated usage, should be replaced with tracing stack
futures-util = "0.3.31"
http = "1.3.1"
log = "0.4.28" # deprecated usage, should be replaced with tracing stack
num-derive = "0.4.2"
num-traits = "0.2.19"
prometheus-client = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
structopt = "0.3.26" # deprecated usage, should be replaced with claps own derive functionality
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "signal"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tonic = { version = "0.12.2", features = [
   "tls",
   "tls-native-roots",
] }
