[package]
name = "wallet-proxy-indexer"
description = "Wallet Proxy Indexer"
version = "0.14.0"
edition = "2021"
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
concordium-rust-sdk.workspace = true
derive_more.workspace = true
env_logger.workspace = true
futures-util.workspace = true
http.workspace = true
num-derive.workspace = true
num-traits.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
structopt.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-util.workspace = true
tonic.workspace = true
